
[project]
authors = [
  {name = "Nathan Collier", email = "nathaniel.collier@gmail.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
description = "Abstract model encapsulation for use in benchmarking"
dynamic = ["version"]
license = {text = "BSD-3-Clause"}
name = "esmodels"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "xarray",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm>=7",
  "wheel"
]

[tool.setuptools]
packages = ["esmodels"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.0"
write_to = "esmodels/_version.py"
write_to_template = '__version__ = "{version}"'

[tool.pytest.ini_options]
console_output_style = "count"
addopts = "--cov=esmodels --cov-report=xml --verbose"

[tool.coverage.run]
omit = [
  "*/esmodels/tests/*"
]
source = ["esmodels"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

[tool.ruff]
extend-exclude = [
  "doc",
]
target-version = "py39"
ignore = [
  "E402",
  "E501",
  "E731",
]
select = [
  "F", # Pyflakes
  "E", # Pycodestyle
  "W",
  "TID", # flake8-tidy-imports (absolute imports)
  "I", # isort
  "UP", # Pyupgrade
]

[tool.ruff.isort]
known-first-party = ["esmodels"]

